--- a/config.cfg
+++ b/config.cfg
@@ -19,10 +19,18 @@ INC_DIR  = .
 
 
 # ************************************************************
+# ECC Source File and Include Directory
+# ************************************************************
+SRC_FILE = ../../../library/ECC/ecc.c
+INC_DIR  = ../../../library/ECC
+
+
+# ************************************************************
 # Board Support Package (BSP) library and header files
 # ************************************************************
 LIB_FILE = ../../../library/BSP/dist/libs/ecc-pic24-bsp.a
 INC_DIR  = ../../../library/BSP/header
+
 
 # ************************************************************
 # Real-Time Library (RTL) and header files
@@ -31,11 +39,35 @@ INC_DIR  = ../../../library/BSP/header
 LIB_FILE = ../../../library/RTL/dist/libs/ecc-pic24-rtl.a
 INC_DIR  = ../../../library/RTL/header
 
+
+# ************************************************************
+# FreeRTOS Library and header files
+# ************************************************************
+LIB_FILE = ../../../library/RTOS/dist/libs/ecc-pic24-rtos.a
+INC_DIR  = ../../../library/RTOS
+INC_DIR  = ../../../library/RTOS/Source/include
+INC_DIR  = ../../../library/RTOS/Source/portable/MPLAB/PIC24_dsPIC
+
+
+# ************************************************************
+# IoT Library and header files
+# ************************************************************
+LIB_FILE = ../../../library/IoT/dist/libs/ecc-pic24-iot.a
+INC_DIR  = ../../../library/IoT/header
+
+
+# ************************************************************
+# CMD Library and header files
+# ************************************************************
+LIB_FILE = ../../../library/CMD/dist/libs/ecc-pic24-cmd.a
+INC_DIR  = ../../../library/CMD/header
+
+
 # ************************************************************
 # Linker script file for the PIC24FJ48GA002 (boot-loader supported)
 # ************************************************************
-# LNK_FILE = ../../../library/BSP/linker/24FJ48GA002.gld
-LNK_FILE = ../../../library/BSP/linker/24FJ48GA002_no_bootloader.gld
+LNK_FILE = ../../../library/BSP/linker/24FJ48GA002.gld
+
 
 # ************************************************************
 # Heap memory size (3k, 1024*3)
@@ -49,6 +81,7 @@ HEAP_SIZE = 3096
 MCU_PART  = 24FJ48GA002
 OUT_DIR   = ./output/objects
 HEX_FILE  = ./output/firmware.hex
+#XC16_DIR = C:\Program Files\Microchip\xc16\v1.50\bin
 
 
 # ************************************************************
